--- a/partials/menu.htm
+++ b/partials/menu.htm
@@ -6,38 +6,33 @@ description = "menu principal"
     <nav id="menu">
         <ul id="menu-main-menu" class="menu">
             <li class="">
-                <a href="#"><span>
+                <a href="/"><span>
                     <i style="font-size: 80%;" class="fas fa-home"></i> Inicio</span>
                 </a>
             </li>
             <li class="">
-                <a href="#"><span>
+                <a href="/material"><span>
                     <i style="font-size: 80%;" class="fas fa-boxes"></i> Material</span>
                 </a>
             </li>
             <li class="">
-                <a href="#"><span>
+                <a href="/biografia"><span>
                     <i style="font-size: 80%;" class="fas fa-feather"></i> Biografía</span>
                 </a>
             </li>
             <li class="">
-                <a href="#"><span>
+                <a href="/eventos"><span>
                     <i style="font-size: 80%;" class="fas fa-calendar-alt"></i> Eventos</span>
                 </a>
             </li>
             <li class="">
-                <a href="#"><span>
+                <a href="/blog"><span>
                     <i style="font-size: 80%;" class="fab fa-blogger"></i> Blog</span>
                 </a>
             </li>
             <li class="">
-                <a href="#"><span>
+                <a href="/contactame"><span>
                     <i style="font-size: 80%;" class="fas fa-mobile-alt"></i> Contáctame</span>
-                </a>
-            </li>
-            <li class="">
-                <a href="#"><span>
-                    <i style="font-size: 80%;" class="fas fa-download"></i> Descargas</span>
                 </a>
             </li>
         </ul>
@@ -45,4 +40,4 @@ description = "menu principal"
     <a class="responsive-menu-toggle" href="#">
         <i class='fas fa-bars' style="color:white"></i>
     </a>
-</div>                        
+</div>
