--- a/layouts/pagina.htm
+++ b/layouts/pagina.htm
@@ -1,8 +1,4 @@
-description = "Diseño base"
-
-[staticPage]
-useContent = 1
-default = 0
+description = "Diseño de pagina"
 ==
 <!DOCTYPE html>
 <html class="no-js" lang="es">
@@ -101,7 +97,24 @@ default = 0
                 <div class="sections_group">
                     <div class="entry-content">
                         {% page %}
-                      
+                        <div class="section full-width dark sections_style_0 ">
+                            <div class="section_wrapper clearfix">
+                                <div class="items_group clearfix">
+                                    <!-- One full width row-->
+                                    <div class="column one column_hover_color">
+                                        <div class="hover_color" style="background:#0c0c63;">
+                                            <div class="hover_color_bg" style="background:#000046;">
+                                                <a href="/material">
+                                                    <div class="hover_color_wrapper">
+                                                        <h2 style="margin: 20px 0;">QUIERES COMPRAR MATERIAL CATÓLICO HAZ CLIC AQUI</h2>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>                        
                     </div>
                 </div>
             </div>
