--- a/layouts/pagina.htm
+++ b/layouts/pagina.htm
@@ -6,7 +6,7 @@ description = "Diseño de pagina"
 
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Willy Martinez Sanchez</title>
+    <title>Willy Martinez Sanchez | {{title_page}} </title>
     <meta name="description" content="Predicador Catolico">
     <meta name="author" content="Willy Martinez">
     <!-- Mobile Specific Metas -->
@@ -21,11 +21,26 @@ description = "Diseño de pagina"
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Patua+One:100,300,400,400italic,700'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret+One" >
     <link rel="stylesheet" href="{{ 'assets/css/all.css'| theme }}">
+
     <!-- CSS -->
     <link rel='stylesheet' href='{{ "assets/css/global.css"| theme }}'>
     <link rel='stylesheet' href='{{ "assets/css/structure.css"| theme }}'>
     <link rel='stylesheet' href='{{ "assets/css/book.css"| theme }}'>
     <link rel='stylesheet' href='{{ "assets/css/custom.css"| theme }}'>
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="{{title_page}}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content=" {{og_url}}" />
+    <meta property="og:image" content=" {{og_img}}" />
+    <meta property="og:description" content="{{og_descripcion}}" />
+
+    <!-- add to any -->
+    <script>
+    var a2a_config = a2a_config || {};
+    a2a_config.locale = "es";
+    </script>
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
 
     <!-- Smartsupp Live Chat script -->
     <script type="text/javascript">
@@ -62,7 +77,7 @@ description = "Diseño de pagina"
                     <div class="top_bar_left">
                         <!-- Logo-->
                         <div class="logo">
-                            <h1><a id="logo" href="/" title="Willy Martinez Sanchez"><img class="scale-with-grid" src="{{ 'assets/images/book.png'| theme }}" alt="Willy Martinez Sanchez" /></a></h1>
+                            <h1><a id="logo" href="/" title="Willy Martinez Sanchez"><img class="scale-with-grid" src="{{ 'logo.png'| media }}" alt="Willy Martinez Sanchez" /></a></h1>
                         </div>
                         <!-- Main menu-->
                         {% partial 'menu' %}
@@ -114,7 +129,7 @@ description = "Diseño de pagina"
                                     </div>
                                 </div>
                             </div>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
             </div>
@@ -145,7 +160,7 @@ description = "Diseño de pagina"
     <script src="{{ 'assets/js/jquery.jplayer.min.js'|theme }}"></script>
     <script src="{{ 'assets/js/animations/animations.js'|theme }}"></script>
     <script src="{{ 'assets/js/scripts.js'|theme }}"></script>
-
+    {% framework extras %}
     <script>
         jQuery(window).load(function() {
             var retina = window.devicePixelRatio > 1 ? true : false;
