--- a/partials/inicio/biografia.htm
+++ b/partials/inicio/biografia.htm
@@ -10,7 +10,8 @@ description = "biografia"
                 <!-- Animated area -->
                 <div class="animate fadeIn" data-anim-type="fadeIn">
                     <div class="image_frame no_link scale-with-grid no_border aligncenter">
-                        <div class="image_wrapper"><img class="scale-with-grid" src="http://intranet.willymartinezsanchez.com/sites/default/files/data/page/2018-11/willy.jpg" alt="">
+                        <div class="image_wrapper">
+                            <img class="scale-with-grid" src="/storage/app/media/w1.jpg" alt="">
                         </div>
                     </div>
                 </div>
