--- a/partials/inicio/redes.htm
+++ b/partials/inicio/redes.htm
@@ -2,3 +2,37 @@ description = "redes"
 
 [viewBag]
 ==
+<div class="section">
+    <div class="section_wrapper clearfix">
+        <div class="items_group clearfix">
+            <!-- One full width row-->
+            <div class="column one-third column_column">
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fwilly.martinez.sanchez.2016%2F&amp;tabs=timeline&amp;width=340&amp;height=500&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId=2006427016273865" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>
+            <div class="column one-third column_column">
+                <!-- Recent posts -->
+                <aside class="widget widget_mfn_recent_posts">
+                    <h4>Últimos videos</h4>
+                    <div class="Recent_posts">
+                    <ul>
+
+                    </ul>
+                    </div>
+                </aside>
+            </div>
+            <div class="column one-third column_column">
+                <a class="twitter-timeline" data-height="500px" href="https://twitter.com/WillyMartinezS1?ref_src=twsrc%5Etfw">Tweets by WillyMartinezS1</a> 
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+            <div class="column one-third column_column">
+                <h4>Donaciones</h4>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="MLWLMBP2W35QU">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">
+                    
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
