--- a/partials/menu.htm
+++ b/partials/menu.htm
@@ -5,34 +5,44 @@ description = "menu principal"
 <div class="menu_wrapper">
     <nav id="menu">
         <ul id="menu-main-menu" class="menu">
-            <li class="">
+            <li class="{{class_inicio}}">
                 <a href="/"><span>
                     <i style="font-size: 80%;" class="fas fa-home"></i> Inicio</span>
                 </a>
             </li>
-            <li class="">
+            <li class="{{class_material}}">
                 <a href="/material"><span>
                     <i style="font-size: 80%;" class="fas fa-boxes"></i> Material</span>
                 </a>
             </li>
-            <li class="">
+            <li class="{{class_biografia}}">
                 <a href="/biografia"><span>
                     <i style="font-size: 80%;" class="fas fa-feather"></i> Biografía</span>
                 </a>
             </li>
-            <li class="">
+            <li class="{{class_eventos}}">
                 <a href="/eventos"><span>
                     <i style="font-size: 80%;" class="fas fa-calendar-alt"></i> Eventos</span>
                 </a>
             </li>
-            <li class="">
+            <li class="{{class_blog}}">
                 <a href="/blog"><span>
                     <i style="font-size: 80%;" class="fab fa-blogger"></i> Blog</span>
                 </a>
             </li>
-            <li class="">
+            <li class="{{class_cursos_virtuales}}">
+                <a href="/cursos-virtuales"><span>
+                    <i style="font-size: 80%;" class="fas fa-mobile-alt"></i> Cursos virtuales</span>
+                </a>
+            </li>
+            <li class="{{class_contactame}}">
                 <a href="/contactame"><span>
-                    <i style="font-size: 80%;" class="fas fa-mobile-alt"></i> Contáctame</span>
+                    <i style="font-size: 80%;" class="fas fa-user"></i> Contáctame</span>
+                </a>
+            </li>
+            <li class="{{class_descargas}}">
+                <a href="/descargas"><span>
+                    <i style="font-size: 80%;" class="fas fa-cloud-download-alt"></i> Descargas</span>
                 </a>
             </li>
         </ul>
